--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ Slide_MIT
 *.lyx~
 Slide/2022/00.Pengantar/00.Pengantar_Coretan.pdf
 Slide/2022/01.Sinyal/01.Sinyal_Coretan.pdf
+*.m4a
+*.mp4
+*.conf
